# factorio-bot-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RUNTIMES_CHANGELOG.md  Rocket.toml  Settings.toml  entity_graph.dot  flow_graph.dot  task_graph.dot
.github/workflows/: create_tag_and_release.yml
backend/: Cargo.toml
backend/src/: draw.rs  error.rs  lib.rs  main.rs  types.rs
backend/src/data/: mod-list.json
backend/src/factorio/: entity_graph.rs  factorio_planner.rs  flow.rs  flow_graph.rs  instance_setup.rs  lua.rs  mod.rs  output_parser.rs  output_reader.rs  plan.rs  plan_builder.rs  planner.rs  process_control.rs  rcon.rs  roll_best_seed.rs  task_graph.rs  tasks.rs  tests.rs  util.rs  world.rs  ws.rs
backend/src/web/: graph_tiles.rs  map_tiles.rs  mod.rs  rest_api.rs  server.rs
backend/src/ws/: mod.rs  server.rs  session.rs
docs/: LuaGlobals.md
frontend/: Cargo.toml  build.rs  external.d.ts  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/blueprints/: strings.ts
frontend/src/components/: Control.vue  Player.vue  SelectedTask.vue  TaskGraph.vue  Tasks.vue
frontend/src/factorio-bot/: blueprints.ts  bot-manager.ts  bot-queue.ts  bot.ts  restApi.ts  task.ts  types.ts  util.spec.ts  util.ts
frontend/src/factorio-bot/tasks/: build-blueprint-task.ts  build-early-mall-task.ts  build-furnace-line-task.ts  build-miner-line-task.ts  build-starter-base-task.ts  build-starter-lab-task.ts  build-starter-miner-chest-task.ts  build-starter-miner-coal-task.ts  build-starter-miner-furnace-task.ts  build-starter-offshore-pump-task.ts  build-starter-steam-engine-task.ts  craft-task.ts  gather-task.ts  loop-research-task.ts  loop-starter-miner-chest-task.ts  loop-starter-miner-coal-task.ts  loop-starter-miner-furnace-task.ts  loop-starter-miners-task.ts  mine-task.ts  place-starter-miner-furnace.ts  place-task.ts  research-task.ts  start-rocket-task.ts
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/views/: EntityGraph.vue  FlowGraph.vue  Graph.vue  Home.vue  Map.vue  TasksGraph.vue
frontend/tests/unit/: example.spec.ts
mod/: control.lua  types.lua
mods/BotBridge/: control.lua  types.lua
plans/: arturh.lua
