[package]
name = "factorio-bot-backend"
version = "0.1.2"
authors = ["Artur Hallmann <arturh@arturh.de>"]
edition = "2018"

[dependencies]
rand = "*"
rcon = "0.3.0"
bb8 = "0.4.2"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-files = "0.2.1"
actix-cors = "0.2.0"
actix-broker = "0.3.0"
actix-web-actors = "2.0"
actix-taskqueue = "0.1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
clap = "2"
config = "0.10.1"
webbrowser = "0.5.5"
pathfinding = "2.0.4"
paris = { version = "1.5", features = ["timestamps", "macros"] }
color-eyre = "0.5.1"
petgraph = { version = "0.5.1", features = ["all"] }
indicatif = "0.15.0"
err-derive = "0.2.2"
wildmatch = "1.0.11"
image = "0.23.7"
imageproc = "0.21.0"
rusttype = "0.9.2"
evmap = "10.0.2"
evmap-derive = "0.1.0"
archiver-rs = { git = "https://github.com/JoyMoe/archiver-rs", branch = "issue-1", features = ["zip", "xz", "tar"] }
factorio-blueprint = "0.1.1"
anyhow = "1.0"
num-traits = "^0.2"
async-trait = "0.1.36"
async-std = { version = "1.6.2", features = ["unstable"] }
noisy_float = { version = "0.1.12", features = ["serde-1"] }
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"]}
enum-primitive-derive = "0.2.1"
unicode-segmentation = "1.6.0"
strum = "0.19.2"
strum_macros = "0.19.2"
aabb-quadtree = "0.2.0"
dashmap = "3.11.10"
euclid = "0.19.*"
smallvec = "*"
base64 = "0.12.3"
flate2 = "1.0.17"