[package]
name = "factorio-bot-frontend"
version = "0.1.0"
authors = ["Artur Hallmann <a.hallmann@neusta.de>"]
edition = "2018"

[build-dependencies]
which = "4.0.1"
typescript-definitions = { git = "https://github.com/ufoscout/typescript-definitions", branch = "no-debug-attrs", features = ["export-typescript"]}
factorio-bot-backend = { version = "0.1.0", path = "../backend/" }

